language/move-lang/tests/move_check/parser/attribute_num_sign_no_bracket.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/attribute_num_sign_no_bracket.move:4:5
  │
4 │     fun foo() {}
  │     ^^^
  │     │
  │     Unexpected 'fun'
  │     Expected '['

