language/move-lang/tests/move_check/parser/attribute_num_sign_no_bracket.move
module 0x42::M {
    // Errors expecting a '['
    #
    fun foo() {}
}
